config-root/namespaces/jx-production/jx3-python-http-example/jx3-python-http-example-jx3-python-http-example-deploy.yaml
# Source: jx3-python-http-example/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-python-http-example-jx3-python-http-example
  labels:
    draft: draft-app
    chart: "jx3-python-http-example-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx3-python-http-example'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: jx3-python-http-example-jx3-python-http-example
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-python-http-example-jx3-python-http-example
    spec:
      serviceAccountName: jx3-python-http-example-jx3-python-http-example
      containers:
        - name: jx3-python-http-example
          image: "10.97.10.152/vmgnud/jx3-python-http-example:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
