config-root/namespaces/jx-production/jx3-python-http-example/jx3-python-http-example-svc.yaml
# Source: jx3-python-http-example/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx3-python-http-example
  labels:
    chart: "jx3-python-http-example-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jx3-python-http-example'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx3-python-http-example-jx3-python-http-example
